--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,18 @@
+<link href="https://fonts.googleapis.com/css2?family=Itim&display=swap" rel="stylesheet">
 <!doctype html>
 <html lang="en">
 <head>
+  <style>
+    .font{
+      font-family: 'Itim', cursive;
+      font-size: 25px;
+    }
+  </style>
   <meta charset="utf-8">
   <title>Tracker</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="assets/images/icons8-settings-512.png">
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
